# cheat_sheets

./: README.md  package.json  pyproject.toml
numpy/: numpy.ipynb  numpy_linear_algebra.ipynb
numpy/.ipynb_checkpoints/: numpy-checkpoint.ipynb
