[tool.poetry]
name = "cheat-sheets"
version = "0.1.0"
description = "Cheat Sheets"
authors = ["Gaurang Dave <gaurangvdave+ubuntu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
